layout issue fixed

--- a/src/app/components/Sidebar/Sidebar.css
+++ b/src/app/components/Sidebar/Sidebar.css
@@ -1,5 +1,4 @@
 .sidebar {
-  flex: 0.2;
   border-radius: 10px;
   text-align: center;
 }
