--- a/src/app/components/SidebarRight/SidebarRight.css
+++ b/src/app/components/SidebarRight/SidebarRight.css
@@ -1,5 +1,4 @@
 .sidebarRight {
-  flex: 0.2;
   background-color: white;
   border-radius: 10px;
   border: 1px solid lightgray;
